tests/kuttl-test/02-configmap.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
  - configmap2.yaml
assert:
  - configmap1-assert.yaml
