tests/kuttl-test/03-configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: cm-3
  namespace: prod
  labels:
    app: kyverno
data:
  org: kyverno
