tests/kuttl-test/configmap1.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: cm
  namespace: team-lfx
  labels:
    app: kyverno
data:
  org: kyverno
