tests/kuttl-test/configmap1-assert.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: cm
  namespace: team-lfx
  labels:
    app: kyverno
    lfx-mentorship: kyverno
data:
  org: kyverno
